@@ -252,7 +252,7 @@ class rcube_user
 
         // generate a random hash and store it in user prefs
         if (empty($prefs['client_hash'])) {
-            $prefs['client_hash'] = md5($this->data['username'] . mt_rand() . $this->data['mail_host']);
+            $prefs['client_hash'] = rcube_utils::random_bytes(16);
             $this->save_prefs(array('client_hash' => $prefs['client_hash']));
         }
 
